fixed spacing issues, add hover link effects

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,13 @@ a {
     text-transform: uppercase;
 }
 
+a:hover,
+a:focus {
+    font-weight: 700;
+    border-bottom: 2px solid white;
+    /* padding-bottom: 5px; */
+}
+
 ul {
     padding: 0;
     margin: 0;
@@ -63,6 +70,7 @@ h1 span {
 
 .logo {
     font-style: italic;
+    padding:2rem;
 }
 
 a .logo {
@@ -76,6 +84,8 @@ a .logo {
 /* Start of menu nav */
 .bars {
     display: none;
+    padding-right: 2rem;
+    font-size: 2rem;
 }
 
 .menu ul {
@@ -96,24 +106,18 @@ a .logo {
 /* Start of socials menu */
 .socials ul {
     float: right;
-    padding-bottom: 2rem;
+    padding: 2rem 5rem;
+
 }
 
 .socials li {
     text-align: center;
-    padding: 0.2rem 0;
+    padding: 0.5rem 0;
 }
 
 .socials a{
     text-decoration: none;
     color: white;
-}
-
-.socials p {
-    visibility: hidden;
-    height: 0;
-    padding: 0;
-    margin: 0;
 }
 
 /* Start of body */
@@ -122,15 +126,15 @@ h3,
 h4 {
     font-family: 'Cormorant Garamond', serif;
     font-weight: 600;
-    font-size: 4.9rem;
-    line-height: 4.9rem;
+    font-size: 3.5rem;
+    line-height: 3.5rem;
     text-align: center;
     text-transform: uppercase;
 }
 
 h4 {
-    font-size: 3.5rem;
-    line-height: 3.5rem;
+    font-size: 3rem;
+    line-height: 3rem;
     text-align: left;
     margin: 0;
 }
@@ -211,7 +215,7 @@ article h2 {
 .scenes-content {
     text-align: left;
     max-width: calc(50% - 10rem);
-    padding: 5rem 0;
+    padding-bottom: 5rem;
 }
 
 .scenes img {
@@ -259,7 +263,8 @@ footer ul {
     margin-top: 10rem;
 }
 
-.community a {
+.community i, 
+.community h3 {
     color: white;
     text-align: center;
     text-decoration: none;
@@ -333,6 +338,11 @@ input[type="submit"] {
     text-align: center;
     clear:both;
     padding: 1rem 0;
+    margin: 0;
+}
+
+.copyright a {
+    text-transform: capitalize;
 }
 
 @media (max-width: 1300px) {
@@ -344,17 +354,17 @@ input[type="submit"] {
 
     h2,
     h3 {
-        font-size: 3.5rem;
-        line-height: 3.5rem;
-    }
-
-    h4 {
         font-size: 3rem;
         line-height: 3rem;
     }
 
+    h4 {
+        font-size: 2.8rem;
+        line-height: 2.8rem;
+    }
+
     .community i {
-        font-size: 4rem;
+        font-size: 3rem;
     }
 
     button {
